Gradle plugin has been added